create hello world

--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -1,4 +1,4 @@
-name: Hello world!
+name: Hello checkout
 
 on: push
 
@@ -6,5 +6,8 @@ jobs:
   myjob1:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v4
+      - name: List files in repo
       - run: echo "🎉 Hello world!"
       - run: echo "The job was triggered by ${{ github.event_name }}"
+      - run: ls ${{ github.workspace }}
